--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "Nick Barak",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "parcel-bundler": "^1.12.4",
     "sass": "^1.26.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.9.2",
+    "babel-polyfill": "^6.26.0",
     "compile.js": "^1.1.4",
     "dexie": "^2.0.4",
     "fs": "0.0.1-security",
